--- a/0xece/templates/index.html
+++ b/0xece/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block stylesheets %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('views.themes', path='css/style.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
